Empty state for OrderProcessing page

--- a/OrderFood_SW/Views/Shared/_CustomerHeader.cshtml
+++ b/OrderFood_SW/Views/Shared/_CustomerHeader.cshtml
@@ -49,7 +49,7 @@
                         <span>Order History</span>
                     </a>
 
-                    <a href="#" class="dropdown-item">
+                    <a href="~/Customer/OrderProcessing" class="dropdown-item">
                         <i class="fas fa-truck"></i>
                         <span>Order Process</span>
                     </a>
