--- a/OrderFood_SW/Views/Dishes/Details.cshtml
+++ b/OrderFood_SW/Views/Dishes/Details.cshtml
@@ -39,7 +39,7 @@
 
                             <dt>Photo: </dt>
                             <dd>
-                                <img style="width:200px; height: 150px" src="~/images/@Model.ImageUrl" alt="No photo" />
+                                <img style="width:200px; height: 150px" src="~/images/Products/@Model.ImageUrl" alt="No photo" />
                             </dd>
                         </dl>
                     </div>
