--- a/OrderFood_SW/Views/Dishes/Edit.cshtml
+++ b/OrderFood_SW/Views/Dishes/Edit.cshtml
@@ -71,7 +71,7 @@
                             <div class="form-group">
                                 <label class="col-sm-3 control-label">Dish Image</label>
                                 <div class="col-sm-9">
-                                    <img style="width:200px; height: 150px" src="~/images/@Model.ImageUrl" alt="No photo" />
+                                    <img style="width:200px; height: 150px" src="~/images/Products/@Model.ImageUrl" alt="No photo" />
                                 </div>
                             </div>
 
