--- a/OrderFood_SW/Views/Customer/OrderProcessing.cshtml
+++ b/OrderFood_SW/Views/Customer/OrderProcessing.cshtml
@@ -13,7 +13,7 @@
             <div class="empty-icon">
                 <i class="fas fa-shopping-cart"></i>
             </div>
-            <h2 class="empty-title">Your order history is empty</h2>
+            <h2 class="empty-title">You don't have any order in process'/h2>
             <p class="empty-description" style="margin-bottom: 20px">You haven't placed any orders yet. Start exploring our menu!</p>
             <a href="/CustomerOrder/CreateOrder" class="#">
                 <i class="fas fa-plus"></i> Add Items
