--- a/OrderFood_SW/Views/Customer/Edit.cshtml
+++ b/OrderFood_SW/Views/Customer/Edit.cshtml
@@ -36,21 +36,13 @@
                 <input asp-for="Email" class="form-control" />
             </div>
             
-            <div class="form-group">
-                <label asp-for="Role">Role</label>
-                <input asp-for="Role" class="form-control" />
-            </div>
+            <input type="hidden" asp-for="Role"/>
             
-            <div class="status-toggle">
-                <div class="form-check">
-                    <input class="form-check-input" asp-for="IsActive" />
-                    <label class="form-check-label">@Html.DisplayNameFor(m => m.IsActive)</label>
-                </div>
-            </div>
+            <input type="hidden" asp-for="IsActive" />
             
             <div class="form-actions">
                 <button type="submit" class="btn-save">Save Changes</button>
-                <a asp-action="Index" class="back-link">Back to List</a>
+                <a asp-action="Index" class="back-link">Back to profile</a>
             </div>
         </form>
     </div>
