--- a/OrderFood_SW/Views/Shared/_CustomerHeader.cshtml
+++ b/OrderFood_SW/Views/Shared/_CustomerHeader.cshtml
@@ -39,6 +39,11 @@
 
                     <div class="dropdown-divider"></div>
 
+                    <a href="~/CustomerOrder/CreateOrder" class="dropdown-item">
+                        <i class="fas fa-home"></i>
+                        <span>Menu</span>
+                    </a>
+
                     <a href="~/Customer/Index" class="dropdown-item">
                         <i class="fas fa-user"></i>
                         <span>Profile</span>
