--- a/OrderFood_SW/wwwroot/css/customer-style/customer-layout.css
+++ b/OrderFood_SW/wwwroot/css/customer-style/customer-layout.css
@@ -174,7 +174,8 @@ body {
     border-radius: 50%;
     width: 24px;
     height: 24px;
-    display: flex;
+    /*    display: flex;*/
+    display: none;
     align-items: center;
     justify-content: center;
     font-size: 0.8em;
