--- a/OrderFood_SW/Views/Account/AccessDenied.cshtml
+++ b/OrderFood_SW/Views/Account/AccessDenied.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    Layout = "_Layout";
+    Layout = null;
 }
 
 <div class="container" style="display: flex; justify-content: center; margin-top: 100px; color:darkred">
-    <h1>bạn không có quyền truy cập trang này, vui lòng quay lại.</h1>
+    <h1>Access denied! please, return to your previous page</h1>
 </div>
