--- a/OrderFood_SW/Views/Customer/Edit.cshtml
+++ b/OrderFood_SW/Views/Customer/Edit.cshtml
@@ -22,8 +22,8 @@
             
             <div class="form-group">
                 <label asp-for="NewPassword">New Password</label>
-                <input asp-for="NewPassword" class="form-control" type="password" placeholder="Leave blank to keep current password" />
-                <div class="password-hint">Leave blank to keep current password</div>
+                <input asp-for="NewPassword" class="form-control" type="password" placeholder="Enter new password" />
+                <div class="password-hint">* Leave blank to keep current password</div>
             </div>
             
             <div class="form-group">
