--- a/OrderFood_SW/Views/CustomerOrder/Index.cshtml
+++ b/OrderFood_SW/Views/CustomerOrder/Index.cshtml
@@ -26,7 +26,7 @@
                     <div class="table-icon">
                         <i class="fas fa-chair"></i>
                     </div>
-                    <div class="table-number">Table @item.TableNumber</div>
+                    <div class="table-number">Table number @item.TableNumber</div>
                     <div class="table-status" style="background-color: brown">@item.Status</div>
                     <div class="qr-code">
                         <i class="fas fa-qrcode"></i>
@@ -40,7 +40,7 @@
                     <div class="table-icon">
                         <i class="fas fa-chair"></i>
                     </div>
-                    <div class="table-number">Table @item.TableNumber</div>
+                    <div class="table-number">Table number @item.TableNumber</div>
                     <div class="table-status">@item.Status</div>
                     <div class="qr-code">
                         <i class="fas fa-qrcode"></i>
