--- a/OrderFood_SW/wwwroot/css/customer-style/customer-layout.css
+++ b/OrderFood_SW/wwwroot/css/customer-style/customer-layout.css
@@ -350,7 +350,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 8px;
-    margin-bottom: 3rem;
+    margin-bottom: 25px;
     flex-wrap: wrap;
     animation: slideUp 0.8s ease-out 0.2s both;
 }
